Added pong project

--- a/index.html
+++ b/index.html
@@ -86,6 +86,23 @@
           </div>
         </div>
       </div>
+
+      <div class="project-container-flipped">
+        <div class="project-description-flipped">
+          <div class="project-title-flipped">
+            SFML Pong Project
+          </div>
+          <div class="project-details-flipped">
+            <p>This is a game project where I wanted to step outside of using one of the big game engines out there like I did previously. It's just a simple game of pong. I wanted to get a better understanding of how certain game mechanisms work from the ground up such as collisions, and get past some of the abstraction the game engines I used in the past provided. The game can be downloaded <a class="link" href="https://www.dropbox.com/scl/fo/aodx5za1ron0gq0sg9fed/AKZ5NHu3KGtFWTbtx6eZZSM?rlkey=05pznnskjvtuawqj373apnkm1&st=yk8cbz8t&dl=0">here</a></p>
+          </div>
+        </div>
+        <div class="project-image-flipped">
+          <img src="images/sfml-pong-project-screenshots/pong-ss-1.png">
+        </div>
+      </div>
+
+
+
     </div>
 
   </body>
