--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <p>Mega Man Platformer Project</p>
           </div>
           <div class="project-details">
-            <p>This is my second project made using unreal engine 5. It is a 2D platformer with similar mechanics to that of the original mega man games. At this point I have grown more used to working with unreal engine and its visual scripting system "Blueprints". But overall it was interesting to go through the process of creating a 2D game within a 3D environment, and seeing first hand how other games I have played in the past used a 3D environment withing 2D perspectives. More screenshots from the game can be viewed <a class="link" href="mega_man_action_platformer.html">here</a> and can can be downloaded <a class="link" href="https://www.dropbox.com/scl/fo/jn8ifrc6jk0rqmzoc96e2/ANZ7AN_cHoFyRJbcisoNX1Q?rlkey=bvbtcwux7ncsz2iz1fn0n8f3q&st=08knqt98&dl=0">here</a></p>
+            <p>This is my second project made using unreal engine 5. It is a 2D platformer with similar mechanics to that of the original mega man games. At this point I have grown more used to working with unreal engine and its visual scripting system "Blueprints". But overall it was interesting to go through the process of creating a 2D game within a 3D environment, and seeing first hand how other games I have played in the past used a 3D environment within its 2D perspectives. More screenshots from the game can be viewed <a class="link" href="mega_man_action_platformer.html">here</a> and can can be downloaded <a class="link" href="https://www.dropbox.com/scl/fo/jn8ifrc6jk0rqmzoc96e2/ANZ7AN_cHoFyRJbcisoNX1Q?rlkey=bvbtcwux7ncsz2iz1fn0n8f3q&st=08knqt98&dl=0">here</a></p>
           </div>
         </div>
       </div>
