Updated project contents
Added additional image to mega man action platformer project screenshots.

--- a/mega_man_action_platformer.html
+++ b/mega_man_action_platformer.html
@@ -39,6 +39,7 @@
       <img src="images/mega_man_action_platformer_project-screenshots/mega-man-action-platformer-image-12.png">
       <img src="images/mega_man_action_platformer_project-screenshots/mega-man-action-platformer-image-13.png">
       <img src="images/mega_man_action_platformer_project-screenshots/mega-man-action-platformer-image-14.png">
+      <img src="images/mega_man_action_platformer_project-screenshots/Level_outline.png">
     </div>
 
   </body>
