--- a/mega_man_action_platformer.html
+++ b/mega_man_action_platformer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <title>MPCreations-DR</title>
+      <title>MPCreations-MMPP</title>
       
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
