--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="about-me-image-text-container">
           <img src="images/IMG-20230301-WA0010.jpg" class="about-me-image">
           <p class="about-me-text">
-            Hi my name is Maxim Petrov, a student with hopes of breaking into the tech/video game industry. Welcome to my website! Below, you'll find a showcase of my work. Please take a moment to explore and discover more about my journey and projects. Thank you for visiting!
+            Hi my name is Maxim Petrov, a student with hopes of breaking into the tech/video game industry. Below you'll find a showcase of my project work. Please take a moment to explore and discover more about my journey and projects. Thank you for visiting!
           </p>
         </div>
       </div>
@@ -110,8 +110,22 @@
             <p>Mega Man Platformer Project</p>
           </div>
           <div class="project-details">
-            <p>This is my second project made using unreal engine 5. It is a 2D platformer with similar mechanics to that of the original mega man games. At this point I have grown more used to working with unreal engine and its visual scripting system "Blueprints". But overall it was interesting to go through the process of creating a 2D game within a 3D environment, and seeing first hand how other games I have played in the past used a 3D environment within its 2D perspectives. More screenshots from the game can be viewed <a class="link" href="mega_man_action_platformer.html">here</a> and can can be downloaded <a class="link" href="https://www.dropbox.com/scl/fo/jn8ifrc6jk0rqmzoc96e2/ANZ7AN_cHoFyRJbcisoNX1Q?rlkey=bvbtcwux7ncsz2iz1fn0n8f3q&st=08knqt98&dl=0">here</a></p>
+            <p>This is my second project made using unreal engine 5. It is a 2D platformer with similar mechanics to that of the original mega man games. At this point I have grown more used to working with unreal engine and its visual scripting system "Blueprints". But overall it was interesting to go through the process of creating a 2D game within a 3D environment, and seeing first hand how other games I have played in the past used a 3D environment within its 2D perspectives. More screenshots from the game can be viewed <a class="link" href="mega_man_action_platformer.html">here</a> and can be downloaded <a class="link" href="https://www.dropbox.com/scl/fo/jn8ifrc6jk0rqmzoc96e2/ANZ7AN_cHoFyRJbcisoNX1Q?rlkey=bvbtcwux7ncsz2iz1fn0n8f3q&st=08knqt98&dl=0">here</a></p>
           </div>
+        </div>
+      </div>
+
+      <div class="project-container-flipped">
+        <div class="project-description-flipped">
+          <div class="project-title-flipped">
+            Warehouse Wreckage Project
+          </div>
+          <div class="project-details-flipped">
+            <p>This is a simple project made using unreal engine 5 where you can shoot a ball into some objects and see what happens. The purpose of this project was to get a better understanding of the basics of 3D physics within unreal engine, such as learning how to set up physics for both individual objects and objects consisting of multiple smaller objects, as well as manipulating values such as mass to fine tune how the physics of those objects behaves. The game can be downloaded <a class="link" href="https://www.dropbox.com/scl/fo/ivtgkpalsffeya68xf1m1/AMsyffBYP6bgeMW11mr63vQ?rlkey=xneca69y03vmul9wskxji3ww2&st=xjoktnzd&dl=0">here</a></p>
+          </div>
+        </div>
+        <div class="project-image-flipped">
+          <img src="images/warehouse_wreckage.png">
         </div>
       </div>
 
