--- a/index.html
+++ b/index.html
@@ -129,6 +129,10 @@
         </div>
       </div>
 
+      <div class="project-details-container">
+        <p>More Projects Coming Soon!</p>
+      </div>
+
     </div>
 
   </body>
