--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
     </div>
 
-    <div class="body-container">
+    <!-- <div class="body-container">
       <div class="body-title">
         About Me
       </div>
@@ -38,7 +38,7 @@
           </p>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="body-container">
       <div class="body-title">
@@ -129,9 +129,24 @@
         </div>
       </div>
 
+      <div class="project-container">
+        <div class="project-image">
+          <img src="images/obstacle_course_1.png">
+        </div>
+        <div class="project-decription">
+          <div class="project-title">
+            <p>Obstacle Course Project</p>
+          </div>
+          <div class="project-details">
+            <p>This is a 3D obstacle course project made using unreal engine 5 with a focus on setting up and integrating C++. This project was mainly to familiarize myself with the workflow of working with both C++ in my IDE and all the other features of unreal engine 5 within the engine itself. More screenshots from the game can be viewed <a class="link" href="obstacle_course_screenshots.html">here</a></p>
+          </div>
+        </div>
+      </div>
+
       <div class="project-details-container">
         <p>More Projects Coming Soon!</p>
       </div>
+
 
     </div>
 
