--- a/soulslike_platformer_screenshots.html
+++ b/soulslike_platformer_screenshots.html
@@ -9,6 +9,8 @@
 
 
     <link rel="stylesheet" href="screenshots.css">
+    <link href="https://cdn.jsdelivr.net/npm/flag-icons/css/flag-icons.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -20,8 +22,19 @@
       </a>
       
     </div>
-    <div>
-      <p class="contact-info">Contact: maxpetrov2016@gmail.com</p>
+    <div class="button-container">
+      <button onclick="window.location.href='https://github.com/MaxiimPetrov';">
+        <i class="fab fa-github"></i>
+      </button>
+      <button onclick="window.location.href='https://www.linkedin.com/in/petrov-maxim/';">
+        <i class="fab fa-linkedin"></i>
+      </button>
+      <button onclick="window.location.href='mailto:maxpetrov2016@gmail.com';">
+        <i class="fas fa-envelope"></i>
+      </button>
+      <button onclick="window.location.href='resume.html';">
+        <i class="fas fa-file-alt"></i>
+      </button>
     </div>
   </div>
 
