--- a/index.html
+++ b/index.html
@@ -30,16 +30,14 @@
         <button onclick="window.location.href='https://www.linkedin.com/in/petrov-maxim/';">
           <i class="fab fa-linkedin"></i>
         </button>
-        <button onclick="window.location.href='mailto:maxpetrov2016@gmail.com';">
-          <i class="fas fa-envelope"></i>
-        </button>
         <button onclick="window.location.href='resume.html';">
           <i class="fas fa-file-alt"></i>
         </button>
       </div>
     </div>
 
-    
+   
+
 
     <div class="body-container">
       <div class="project-header">
@@ -62,7 +60,7 @@
           </div>
           <div class="project-description">
             <p>
-              This project marked my first game made with Unity, which is a dungeon crawler bullet hell game with systems that are more complex than any other project I have made in the past. The goal of this project was to enhance my skills in gameplay programming, performance optimization, and iterative game design, equipping me with the technical expertise to bring any future ideas to life.
+              This project marked my first game made with Unity, which is a dungeon crawler bullet hell game with systems that are more complex than any other project I have made in the past. The goal of this project was to enhance my skills in gameplay programming, performance optimization, and iterative game design, equipping me with the technical expertise to help bring any future ideas to life.
             </p>
             <p>
               As the gameplay programmer, I implemented a procedural generation algorithm to create unique, replayable level layouts, ensuring each playthrough felt fresh and engaging. I also developed a minimap system that can adapt to these procedurally generated levels. To optimize performance, I utilized Unity's object pooling system to efficiently manage large volumes of game objects, reducing memory usage and maintaining smooth frame rates. Through extensive performance profiling and debugging, I ensured stability across diverse scenarios, delivering a seamless player experience.
