--- a/resume.html
+++ b/resume.html
@@ -1,67 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>MP-Resume</title>
-    
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Lusitana:wght@400;700&family=Merienda:wght@300..900&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="screenshots.css">
-    <link href="https://cdn.jsdelivr.net/npm/flag-icons/css/flag-icons.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-
-    <style>
-      body {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: calc(100vh - 50px);
-        margin-bottom: 50px;
-        background-color: rgb(15, 27, 49);
-      }
-      .pdf-container {
-        width: 80%;
-        height: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        border: 1px solid #ccc;
-        background-color: #fff;
-      }
-      embed {
-        width: 100%;
-        height: 100%;
-        border: none;
-      }
-    </style>
-  </head>
-
-  <body>
-    
-    <div class="title-container">
-      <div>
-        <a href="index.html" class="header-link">
-          <p class="header">MPCreations</p>
-        </a>
-      </div>
-      <div class="button-container">
-        <button onclick="window.location.href='https://github.com/MaxiimPetrov';">
-          <i class="fab fa-github"></i>
-        </button>
-        <button onclick="window.location.href='https://www.linkedin.com/in/petrov-maxim/';">
-          <i class="fab fa-linkedin"></i>
-        </button>
-        <button onclick="window.location.href='resume.html';">
-          <i class="fas fa-file-alt"></i>
-        </button>
-      </div>
-    </div>
-
-    <!-- PDF container -->
-    <div class="pdf-container">
-      <embed src="images/Resume Website.pdf" type="application/pdf" />
-    </div>
-
-  </body>
-</html>
+<!DOCTYPE html><html> <head> <title>MP-Resume</title> <link rel="preconnect" href="https://fonts.googleapis.com"> <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <link href="https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Lusitana:wght@400;700&family=Merienda:wght@300..900&display=swap" rel="stylesheet"> <link rel="stylesheet" href="screenshots.css"> <link href="https://cdn.jsdelivr.net/npm/flag-icons/css/flag-icons.min.css" rel="stylesheet"> <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet"> <style> body { display: flex; justify-content: center; align-items: center; height: calc(100vh - 50px); margin-bottom: 50px; background-color: rgb(15, 27, 49); } .pdf-container { width: 80%; height: 100%; display: flex; justify-content: center; align-items: center; border: 1px solid #ccc; background-color: #fff; } embed { width: 100%; height: 100%; border: none; } </style> </head> <body> <div class="title-container"> <div> <a href="index.html" class="header-link"> <p class="header">MPCreations</p> </a> </div> <div class="button-container"> <button onclick="window.location.href='https://github.com/MaxiimPetrov';"> <i class="fab fa-github"></i> </button> <button onclick="window.location.href='https://www.linkedin.com/in/petrov-maxim/';"> <i class="fab fa-linkedin"></i> </button> <button onclick="window.location.href='resume.html';"> <i class="fas fa-file-alt"></i> </button> </div> </div> <!-- PDF container --> <div class="pdf-container"> <embed src="images/Resume Website.pdf" type="application/pdf" /> </div> </body></html>
