--- a/soulslike_platformer_screenshots.html
+++ b/soulslike_platformer_screenshots.html
@@ -1,1 +1,77 @@
-<!DOCTYPE html><html><head> <title>MPCreations-SLP</title> <link rel="preconnect" href="https://fonts.googleapis.com"> <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <link href="https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Lusitana:wght@400;700&family=Merienda:wght@300..900&display=swap" rel="stylesheet"> <link rel="stylesheet" href="screenshots.css"> <link href="https://cdn.jsdelivr.net/npm/flag-icons/css/flag-icons.min.css" rel="stylesheet"> <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet"></head><body> <div class="title-container"> <div> <a href="index.html" class="header-link"> <p class="header">MPCreations</p> </a> </div> <div class="button-container"> <a href="https://github.com/MaxiimPetrov" target="_blank" rel="noopener noreferrer"> <button> <i class="fab fa-github"></i> </button> </a> <a href="https://www.linkedin.com/in/petrov-maxim/" target="_blank" rel="noopener noreferrer"> <button> <i class="fab fa-linkedin"></i> </button> </a> <a href="resume.html" target="_blank" rel="noopener noreferrer"> <button> <i class="fas fa-file-alt"></i> </button> </a> </div> </div> <div class="image-grid"> <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-1.png"> <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-2.png"> <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-3.png"> <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-4.png"> <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-5.png"> <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-6.png"> <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-7.png"> <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-8.png"> <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-9.png"> <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-10.png"> <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-11.png"> <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-12.png"> <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-13.png"> <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-14.png"> <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-15.png"> <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-16.png"> <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-17.png"> <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-18.png"> <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-19.png"> <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-20.png"> <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-21.png"> <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-22.png"> <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-23.png"> <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-24.png"> <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-25.png"> <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-26.png"> <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-27.png"> <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-28.png"> <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-29.png"> </div></body></html>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>MPCreations-SLP</title>
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Lusitana:wght@400;700&family=Merienda:wght@300..900&display=swap" rel="stylesheet">
+
+
+    <link rel="stylesheet" href="screenshots.css">
+    <link href="https://cdn.jsdelivr.net/npm/flag-icons/css/flag-icons.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+</head>
+
+<body>
+  
+  <div class="title-container">
+    <div>
+      <a href="index.html" class="header-link">
+        <p class="header">MPCreations</p>
+      </a>
+      
+    </div>
+    <div class="button-container">
+      <a href="https://github.com/MaxiimPetrov" target="_blank" rel="noopener noreferrer">
+        <button>
+          <i class="fab fa-github"></i>
+        </button>
+      </a>
+      <a href="https://www.linkedin.com/in/petrov-maxim/" target="_blank" rel="noopener noreferrer">
+        <button>
+          <i class="fab fa-linkedin"></i>
+        </button>
+      </a>
+      <a href="resume.html" target="_blank" rel="noopener noreferrer">
+        <button>
+          <i class="fas fa-file-alt"></i>
+        </button>
+      </a>
+    </div>
+  </div>
+
+  <div class="image-grid">
+    <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-1.png">
+    <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-2.png">
+    <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-3.png">
+    <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-4.png">
+    <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-5.png">
+    <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-6.png">
+    <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-7.png">
+    <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-8.png">
+    <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-9.png">
+    <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-10.png">
+    <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-11.png">
+    <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-12.png">
+    <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-13.png">
+    <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-14.png">
+    <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-15.png">
+    <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-16.png">
+    <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-17.png">
+    <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-18.png">
+    <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-19.png">
+    <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-20.png">
+    <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-21.png">
+    <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-22.png">
+    <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-23.png">
+    <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-24.png">
+    <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-25.png">
+    <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-26.png">
+    <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-27.png">
+    <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-28.png">
+    <img src="images/soulslike_platformer_project_screenshots/soulslike-platformer-project-ss-29.png">
+  </div>
+
+</body>
+</html>
